[gd_scene load_steps=4 format=3 uid="uid://5e71x8tm7aov"]

[ext_resource type="Script" path="res://UI/menu.gd" id="1_bhxyn"]
[ext_resource type="Texture2D" uid="uid://cx0l11nismj3t" path="res://Assets/textures/message.png" id="1_hqily"]
[ext_resource type="FontFile" uid="uid://bphwipsp24rqw" path="res://Assets/fonts/flappyfont.TTF" id="3_8h88n"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_bhxyn")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -293.0
offset_right = 138.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hqily")

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -204.0
offset_right = 125.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("3_8h88n")
theme_override_font_sizes/font_size = 48
text = "SCORE: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("3_8h88n")
theme_override_font_sizes/font_size = 48
text = "BEST: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8h88n")
theme_override_font_sizes/font_size = 48
text = "RESTART"

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
